# tauri-plugin-mlx

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
guest-js/: index.ts  package.json  tsconfig.json
macos/: Package.resolved  Package.swift
macos/Sources/: Bridge.h  MLXWrapper.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: is_loaded.toml
permissions/schemas/: schema.json
src/: catalog.rs  commands.rs  desktop.rs  error.rs  lib.rs  macos_bridge.rs  models.rs
