[package]
name = "tauri-plugin-mlx"
version = "0.1.0"
authors = ["Arun Sanna <arun@arunlabs.com>"]
description = "Tauri v2 plugin for local LLM inference on Apple Silicon using MLX"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
repository = "https://github.com/arunsanna/tauri-plugin-mlx"
keywords = ["tauri", "mlx", "llm", "apple-silicon", "inference"]
categories = ["api-bindings", "os::macos-apis"]
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mlx"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
lazy_static = "1.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
